--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "npm run webpack-all && grunt postinstall && npm run build",
     "build": "rimraf ./dist && npm run tsc-projects",
     "tsc-projects": "concurrently \"tsc\" \"tsc -p src/node\"",
-    "dev": "concurrently \"tsc --watch\" \"tsc -p src/node --watch\"",
+    "dev": "concurrently -k \"tsc --watch\" \"tsc -p src/node --watch\"",
     "test": "npm run build && npm run eslint && npm run tslint && npm run tslint-node",
     "eslint": "eslint --ext .ts ./src",
     "tslint": "tslint -c tslint.json --project tsconfig.json",
@@ -60,7 +60,7 @@
     "@types/marked": "0.0.28",
     "@types/urijs": "1.15.31",
     "@types/which": "1.0.28",
-    "concurrently": "3.1.0",
+    "concurrently": "^4.1.0",
     "eslint": "3.13.1",
     "eslint-config-pureprofile": "2.2.0",
     "glob": "7.1.1",
@@ -102,7 +102,7 @@
         "source-control",
         "kontrola-wersji",
         "system-kontroli-wersji"
-        ]
+      ]
     }
   }
 }
