--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "bluebird": "2.11.0",
     "blueimp-md5": "2.6.0",
     "eventemitter2": "2.2.1",
-    "lodash": "4.17.4",
     "marked": "0.3.9",
     "moment": "2.21.0",
     "urijs": "1.18.4",
@@ -68,6 +67,7 @@
     "grunt-lesslint": "latest",
     "grunt-lineending": "latest",
     "grunt-zip": "latest",
+    "lodash": "^4.17.11",
     "rimraf": "^2.6.3",
     "tslint": "4.3.1",
     "typescript": "2.1.5",
