--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "moment": "2.21.0",
     "urijs": "1.18.4",
     "webpack": "1.14.0",
-    "which": "1.2.12"
+    "which": "^1.3.1"
   },
   "devDependencies": {
     "@types/bluebird": "2.0.30",
@@ -58,7 +58,7 @@
     "@types/jquery": "2.0.39",
     "@types/marked": "0.0.28",
     "@types/urijs": "1.15.31",
-    "@types/which": "1.0.28",
+    "@types/which": "^1.3.1",
     "concurrently": "^4.1.0",
     "eslint": "3.13.1",
     "eslint-config-pureprofile": "2.2.0",
