--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eventemitter2": "2.2.1",
     "marked": "0.3.9",
     "moment": "2.21.0",
-    "urijs": "1.18.4",
+    "urijs": "^1.19.1",
     "webpack": "1.14.0",
     "which": "^1.3.1"
   },
@@ -57,7 +57,7 @@
     "@types/eventemitter2": "2.2.1",
     "@types/jquery": "2.0.39",
     "@types/marked": "0.0.28",
-    "@types/urijs": "1.15.31",
+    "@types/urijs": "^1.15.38",
     "@types/which": "^1.3.1",
     "concurrently": "^4.1.0",
     "eslint": "3.13.1",
