--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "bluebird": "2.11.0",
-    "blueimp-md5": "2.6.0",
+    "blueimp-md5": "^2.10.0",
     "eventemitter2": "2.2.1",
     "marked": "0.3.9",
     "moment": "2.21.0",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "2.0.30",
-    "@types/blueimp-md5": "1.1.30",
+    "@types/blueimp-md5": "^2.7.0",
     "@types/eventemitter2": "2.2.1",
     "@types/jquery": "2.0.39",
     "@types/marked": "0.0.28",
