--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "bluebird": "2.11.0",
     "blueimp-md5": "^2.10.0",
     "eventemitter2": "2.2.1",
-    "marked": "0.3.9",
+    "marked": "^0.6.0",
     "moment": "2.21.0",
     "urijs": "^1.19.1",
     "webpack": "1.14.0",
@@ -56,7 +56,7 @@
     "@types/blueimp-md5": "^2.7.0",
     "@types/eventemitter2": "2.2.1",
     "@types/jquery": "2.0.39",
-    "@types/marked": "0.0.28",
+    "@types/marked": "^0.6.0",
     "@types/urijs": "^1.15.38",
     "@types/which": "^1.3.1",
     "concurrently": "^4.1.0",
