--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "dependencies": {
     "bluebird": "2.11.0",
     "blueimp-md5": "^2.10.0",
-    "eventemitter2": "2.2.1",
+    "eventemitter2": "^5.0.1",
     "marked": "^0.6.0",
     "moment": "2.21.0",
     "urijs": "^1.19.1",
@@ -54,7 +54,6 @@
   "devDependencies": {
     "@types/bluebird": "2.0.30",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/eventemitter2": "2.2.1",
     "@types/jquery": "2.0.39",
     "@types/marked": "^0.6.0",
     "@types/urijs": "^1.15.38",
