--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "devDependencies": {
     "@types/bluebird": "2.0.30",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/jquery": "2.0.39",
+    "@types/jquery": "^2.0.53",
     "@types/marked": "^0.6.0",
     "@types/urijs": "^1.15.38",
     "@types/which": "^1.3.1",
