--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "blueimp-md5": "^2.10.0",
     "eventemitter2": "^5.0.1",
     "marked": "^0.6.0",
-    "moment": "2.21.0",
+    "moment": "^2.23.0",
     "urijs": "^1.19.1",
     "webpack": "1.14.0",
     "which": "^1.3.1"
