--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
     "@types/marked": "^0.6.0",
     "@types/urijs": "^1.15.38",
     "@types/which": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
     "concurrently": "^4.1.0",
     "eslint": "^5.12.1",
     "eslint-config-pureprofile": "^2.3.2",
-    "eslint-plugin-typescript": "^1.0.0-rc.3",
     "glob": "^7.1.3",
     "grunt": "latest",
     "grunt-lesslint": "latest",
@@ -70,7 +71,7 @@
     "lodash": "^4.17.11",
     "rimraf": "^2.6.3",
     "tslint": "4.3.1",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.4"
   },
   "i18n": [
     "en",
