--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "grunt-zip": "latest",
     "lodash": "^4.17.11",
     "rimraf": "^2.6.3",
-    "tslint": "4.3.1",
+    "tslint": "^5.12.1",
     "typescript": "~3.2.4"
   },
   "i18n": [
