--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "marked": "^0.6.2",
     "moment": "^2.24.0",
     "urijs": "^1.19.1",
-    "webpack": "1.14.0",
     "which": "^1.3.1"
   },
   "devDependencies": {
@@ -72,7 +71,9 @@
     "lodash": "^4.17.11",
     "rimraf": "^2.6.3",
     "tslint": "^5.16.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.4.5",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "i18n": [
     "en",
